# assCad

./: .gitignore  1.txt  1530834555  1532204483  24_06_2018_14_39_06.txt  24_06_2018_15_34_05.txt  BasePillar.cs  CurvedPillar.cs  MathFunctions.cs  Pillar.cs  PillarImpl.cs  Proto  README.md  Readme2.md  SegmentGraphProto  SuperFault.cs  TransCoordConverter.cs  doc  doc2  doc3  doc4  file1  file10  file12  file5  file9  group2(4x20(7))_27062018161613  group2(4x20(8))_27062018171757  group2(4x20(8))_27062018180719  loyalty_25062018083905  loyalty_26062018024339  loyalty_26062018024423  loyalty_26062018025121  loyalty_26062018081419  test  test1
avoidTest/root/: CMakeLists.txt
avoidTest/root/avoid/: CMakeLists.txt
avoidTest/root/avoid/src/libavoid/: assertions.h  dllexport.h
avoidTest/root/main/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  data.cpp  data.h  databasestorage.cpp  databasestorage.h  main.cpp  maincontroller.cpp  maincontroller.h  mainwindow.cpp  mainwindow.h  model.h  mouseeventfilter.cpp  mouseeventfilter.h  networkstorage.cpp  networkstorage.h  operation.cpp  operation.h  redooperation.cpp  redooperation.h  storage.cpp  storage.h  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h  undooperation.cpp  undooperation.h
